@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: Intel Corporation
+#
+# SPDX-License-Identifier: BSD-3-Clause
+
 distributed-ranges (0.1-1) UNRELEASED; urgency=medium
 
   * Initial release
